--- a/notes/02slides_digital_logic.tex
+++ b/notes/02slides_digital_logic.tex
@@ -30,42 +30,42 @@
     \item 3 bits: 000, 001, 010, 011, 100, 101, 110, 111
     \item n bits = $2^n$ combinations
     \item Data types
-    \begin{itemize}
-        \item integers
-        \item floating point
-        \item ASCII characters
-        \item unicode
-    \end{itemize}
+   \begin{itemize}
+       \item integers
+       \item floating point
+       \item ASCII characters
+       \item unicode
+   \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}{3 bit}
-\begin{itemize}
-    \item 2 bits: 00, 01, 10, 11
-    \item 3 bits: 000, 001, 010, 011, 100, 101, 110, 111
-    \item n bits = $2^n$ combinations
-    \item Data types
-    \begin{itemize}
-        \item integers
-        \item floating point
-        \item ASCII characters
-        \item unicode
-    \end{itemize}
-\end{itemize}
-\end{frame}
+% \begin{frame}{3 bit}
+% \begin{itemize}
+%     \item 2 bits: 00, 01, 10, 11
+%     \item 3 bits: 000, 001, 010, 011, 100, 101, 110, 111
+%     \item n bits = $2^n$ combinations
+%     \item Data types
+%     \begin{itemize}
+%         \item integers
+%         \item floating point
+%         \item ASCII characters
+%         \item unicode
+%     \end{itemize}
+% \end{itemize}
+% \end{frame}
 
 \begin{frame}[fragile]{Representing 3 bit Integers}
-%\begin{tabular}{p{2.5cm}|p{2.5cm}|p{2.5cm}}    \hline
-%    bits & unsigned & signed \\
-%    000  &        0 &      0 \\
-%    001  &        1 &      1 \\
-%    010  &        2 &      2 \\
-%    011  &        3 &      3 \\
-%    100  &        4 &     -4 \\
-%    101  &        5 &     -3 \\
-%    110  &        6 &     -2 \\
-%    111  &        7 &     -1 \\ \hline
-%\end{tabular}
+% \begin{tabular}{p{2.5cm}|p{2.5cm}|p{2.5cm}}    \hline
+%     bits & unsigned & signed \\
+%     000  &        0 &      0 \\
+%     001  &        1 &      1 \\
+%     010  &        2 &      2 \\
+%     011  &        3 &      3 \\
+%     100  &        4 &     -4 \\
+%     101  &        5 &     -3 \\
+%     110  &        6 &     -2 \\
+%     111  &        7 &     -1 \\ \hline
+% \end{tabular}
 \end{frame}
 
 \begin{frame}[fragile]{Base 16: Hexadecimal}
@@ -84,13 +84,13 @@
 \end{frame}
 
 \begin{frame}{Hexadecimal System}
-    \begin{itemize}
-        \item Hex: Base-16 system
-        \item Compare with binary and decimal
-        \item Easier readability of binary data
-        \item Converting between hex, binary, and decimal
-    \end{itemize}
-    \end{frame}
+\begin{itemize}
+    \item Hex: Base-16 system
+    \item Compare with binary and decimal
+    \item Easier readability of binary data
+    \item Converting between hex, binary, and decimal
+\end{itemize}
+\end{frame}
     
 \begin{frame}{Encoding a byte in Hexadecimal}
 \begin{itemize}
