more crypto slides

--- a/notes/03slides_modern_crypto.tex
+++ b/notes/03slides_modern_crypto.tex
@@ -21,9 +21,10 @@
     \item Only a one-time pad is truly secure
     \begin{itemize}
         \item A key that is truly random, when XORed with a message, is perfectly secure
+        \item Each bit is random
         \item Any cryptosystem that uses a key repeatedly can eventually be broken
         \item Using a one-time pad creates a second problem
-        \item How to generate and distribute random numbers in vast numbers
+        \item How to generate and distribute random numbers in vast numbers?
     \end{itemize}
     \item Security is never based on secrecy of the method of encryption
     \item The only secret is the key itself
@@ -45,6 +46,7 @@
 \begin{itemize}
     \item People are notoriously bad at picking random sequences
     \item Predictable based on knowing the people
+    \item People can be tricked into giving others their passwords
     \item A big, complicated password is hard to remember
     \item Very often, recorded somewhere
 \end{itemize}    
@@ -130,6 +132,7 @@
     \begin{itemize}
         \item Even with a complicated function, a key is not safe if it is reused a lot
         \item Methods of increasing difficulty: Cypher Block Chaining (CBC)
+        \item Each block is used to modify the key so it changes 
         \item Even CBC is subject to plaintext attack
     \end{itemize}
     \includegraphics[scale=0.25]{CBC.png}
@@ -154,10 +157,21 @@
 \includegraphics[width=10cm]{mooreslaw.pdf}
 \end{frame}
 
-
+\begin{frame}{Asymmetric Cryptography}
+    \begin{itemize}
+        \item Invented in 1970s \url{https://en.wikipedia.org/wiki/Public-key_cryptography}
+        \item Diffie-Hellman defined a key exchange
+        \item Rivest, Shamir, and Adleman defined RSA and implemented a working system
+        \item Relies on the fact that some operations are fast to do but slow to undo
+        \item Ironically, it is not proven that one-way functions even exist
+        \item Split the key into public and private
+        \item The public key can be used to encrypt a message
+        \item The private key is needed to decrypt the message
+    \end{itemize}
+\end{frame}
+    
 \begin{frame}{Asymmetric Cryptography}
 \begin{itemize}
-    \item 1969: proposed asymmetric cryptography
     \item Everyone knows the public keys, can be distributed
     \item Source of public keys must be trustworthy
     \item Generally slower than symmetric cryptography operations
@@ -218,17 +232,18 @@
         \item Sender encrypts using receiver's public key $E(n, k_{pub})$ and sends
         \item Receiver decrypts: $n = D(m, k_{priv})$ and send back to sender, proving identity
         \item in ssh key authentication, both sides do this. First we verify that the server really is who it says it is
+        \item Notice, this does not require sending a userid and password to the server
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Signature Validation Security}
-    \begin{itemize}
-        \item Over time, the security of digital signature fades
-        \item Computers get faster, and better algorithms start to threaten the hash function
-        \item My idea: retain a "secret" hash on file in a secure repository
-        \item If an attack in the future claims the message is not correct and offers an alternative
-        \item Prove by unlocking the original secret and rehashing using the secret
-    \end{itemize}
+\begin{itemize}
+    \item Over time, the security of digital signature fades
+    \item Computers get faster, and better algorithms start to threaten the hash function
+    \item My idea: retain a "secret" hash on file in a secure repository
+    \item If an attack in the future claims the message is not correct and offers an alternative
+    \item Prove by unlocking the original secret and rehashing using the secret
+\end{itemize}
 \end{frame}
 
 \begin{frame}{Diffie-Hellman Key Exchange}
@@ -240,6 +255,7 @@
         \item Both parties compute a shared key
         \item Use a symmetric algorithm (AES-256) to encrypt messages
         \item Change keys regularly (ie every 30 minutes)
+        \item This is how https works
     \end{itemize}
 \end{frame}
 
