updated digital logic slides, still need gates

--- a/notes/01slides_intro_cryptography.tex
+++ b/notes/01slides_intro_cryptography.tex
@@ -180,5 +180,41 @@ D E F G H I J K L M N O P Q R S T U V W X Y Z A B C \\
 \end{tabular}
 \end{frame}
 
+\begin{frame}{Enigma}
+    \begin{itemize}
+        \item In World War II, both Germany and Japan relied on electromechanical machines to encrypt messages
+        \item Germany: The Enigma machine
+        \item Japan: similar Type B (US called it Purple)
+        \item By standard of the times, cipher was sophisticated 
+    \end{itemize}
+    \includegraphics[scale=0.25]{wikipedia_enigmamachine.jpg}
+    \end{frame}
+
+\begin{frame}{Enigma Details}
+    \begin{itemize}
+        \item Each character typed rotates the rotor
+        \item Every full rotation, the next rotor advances by 1
+        \item User selects 3 rotors from a kit of 5
+        \item There is also a plugboard swapping pairs of letters
+        \item Not enough to capture a machine, the settings of the rotors and plugboard are required
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Breaking Enigma}
+\begin{itemize} 
+    \item UK attacked Enigma messages by using
+    \begin{itemize}
+        \item Electromechanical computer simulating 36 enigmas in parallel (Bombe)
+        \item Shown in movie \url{https://en.wikipedia.org/wiki/The_Imitation_Game}
+        \item Later electronic machine computing faster with vaccuum tubes
+    \end{itemize}
+    \item Plaintext attacks weather messages which were rigidly formatted
+    \item Messages enciphered both in enigma and another breakable method
+\end{itemize}
+\includegraphics[scale=0.25]{bombe.jpg}
+\includegraphics[scale=0.25]{Colossus.jpg}
+\end{frame}
+
 \end{withoutheadline}
+
 \end{document} 
