--- a/notes/preamble.tex
+++ b/notes/preamble.tex
@@ -48,7 +48,7 @@
 \setbeamertemplate{background canvas}{%
 	\raisebox{-\paperheight+10pt}[0pt][0pt]{%
 		\makebox[\paperwidth][l]{%
-			\hspace{1cm}\includegraphics[width=1.5cm]{ru/logo.png}%
+			\hspace{1cm}\includegraphics[width=1.5cm]{sit/logo.png}%
 		}%
 	}%
 }
@@ -60,7 +60,7 @@
 	\setbeamertemplate{background canvas}{%
 		\raisebox{-\paperheight+\headheight+10pt}[0pt][0pt]{%
 			\makebox[\paperwidth][l]{%
-				\hspace{.5cm}\includegraphics[width=1cm]{ru/logo.png}%
+%				\hspace{.5cm}\includegraphics[width=1cm]{ru/logo.png}%
 			}%
 		}%
 	}
@@ -74,7 +74,7 @@
 	\setbeamertemplate{background canvas}{%
 		\raisebox{-\paperheight+\headheight+17pt}[0pt][0pt]{%
 			\makebox[\paperwidth][r]{%
-				\includegraphics[width=1cm]{ru/logo.png}\hspace{.5cm}%
+				\includegraphics[width=1cm]{sit/logo.png}\hspace{.5cm}%
 			}%
 		}%
 	}
@@ -230,9 +230,10 @@
 \newcommand{\smallspace}{\vspace{2mm}}
 \newcommand{\bigspace}{\vspace{5mm}}
 
-\institute{Department of Electrical and Computer Engineering\\Rutgers University}
+\institute{Department of Electrical and Computer Engineering\\Stevens Institute of Technology}
 % logo of my university
-\titlegraphic{\centering\includegraphics[width=1cm]{ru/logo.png}
+\titlegraphic{\centering\includegraphics[width=8cm]{sit/logo.png}
+\includegraphics{sit/GenCyber.png}
 }
 \author{Dov Kruger}
 \date{\today}
